--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 artist and programmer based in internet. 
 trough my works i try to build intimacy with digital tools i use on daily basis. biggest part of my activity focused on languages and how they 
    influence social codes.
- i use generators and algorythms as an itegral part of creative process. I made a short documentary a few years ago, animation about immigrants identity,
-   generated digital landscapes and put some thoughts about users in form of interactive pieces. Together with my friend we bult a first AI political party, 
+ i use generators and algorythms as an itegral part of creative process. I made <b><a href="default.asp" target="_blank"> a short documentary </a> </b> a few years ago, animation about immigrants identity,
+   <b><a href="default.asp" target="_blank">generated digital landscapes</a> </b> and put some thoughts about users in form of interactive pieces. Together with my friend we bult
+   a <b><a href="default.asp" target="_blank">  first AI political party </a> </b>, 
    which is now manifesting itself through social media platforms.
    Currently im working on web series about computers and generators. Feel free to drop a line on: hello@anastasia-naumenko.com </h1>
    
