--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ artist and programmer based in internet.
 trough my works i try to build intimacy with digital tools i use on daily basis. biggest part of my activity focused on languages and how they 
    influence social codes.
  i use generators and algorythms as an itegral part of creative process. I made a short documentary a few years ago, animation about immigrants identity,
-   <p id='link1'> generated digital landscapes </p> and put some thoughts about users in form of interactive pieces. Together with my friend we bult
+   <span id='link1'> generated digital landscapes </span> and put some thoughts about users in form of interactive pieces. Together with my friend we bult
    a first AI political party , 
    which is now manifesting itself through social media platforms.
    Currently im working on web series about computers and generators. Feel free to drop a line on: hello@anastasia-naumenko.com </h1>
