--- a/index.html
+++ b/index.html
@@ -1,21 +1,243 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <link rel="stylesheet" href="styles.css">
-<title> </title>
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <title> </title>
+    <script
+      src="script.js">
+    </script>
+  </head>
 
-<h1 class="h1"> hi! i’m anastasia naumenko, 
-artist and programmer based in internet. 
-trough my works i try to build intimacy with digital tools i use on daily basis. biggest part of my activity focused on languages and how they 
-   influence social codes.
- i use generators and algorythms as an itegral part of creative process. I made a short documentary a few years ago, animation about immigrants identity,
-   <span id='link1'> generated digital landscapes </span> and put some thoughts about users in form of interactive pieces. Together with my friend we bult
-   a first AI political party , 
-   which is now manifesting itself through social media platforms.
-   Currently im working on web series about computers and generators. Feel free to drop a line on: hello@anastasia-naumenko.com </h1>
-   
-   
-</body>
+  <body>
+    <h1 class="h1">
+      <span onclick="myFunction()"> Hi! I'm</span>
+      <span
+        class="link2"
+        onclick="document.getElementById('add-window-6').style.display='block'"
+      >
+        Anastasia Naumenko</span
+      >,<span onclick="myFunction()">
+        an artist and programmer based on the internet. Through my work I try to
+        build intimacy with the digital tools I use on a daily basis. The
+        biggest part of my activity focuses on languages and how they influence
+        social (real and virtual) structures. I use generators and algorithms as
+        an integral part of the creative process.I made a</span
+      >
+      <span
+        ><a href="https://vimeo.com/264788654" target="_blank"
+          >short documentary</a
+        ></span
+      >
+      <span onclick="myFunction()">a few years ago,</span>
+      <span
+        class="link2"
+        onclick="document.getElementById('add-window-2').style.display='block'"
+      >
+        an animation about immigrants' identity</span
+      >,
+      <span
+        class="link2"
+        onclick="document.getElementById('add-window-1').style.display='block'"
+      >
+        generated digital landscapes</span
+      >
+      <span onclick="myFunction()">and put</span>
+      <span
+        class="link2"
+        onclick="document.getElementById('add-window-3').style.display='block'"
+        >some thoughts</span
+      >
+      <span onclick="myFunction()"
+        >about modern users in form of interactive pieces</span
+      ><span
+        ><a href="http://play.anastasia-naumenko.com/bin/" target="_blank"
+          >(1)</a
+        ></span
+      >
+      <span
+        ><a
+          href="http://play.anastasia-naumenko.com/desktopnature/"
+          target="_blank"
+          >(2)</a
+        ></span
+      >.<span onclick="myFunction()"> My friend and I have built the</span>
+      <span
+        class="link2"
+        onclick="document.getElementById('add-window-4').style.display='block'"
+        >first AI political party</span
+      >
+
+      <span onclick="myFunction()">,which is now manifesting itself on</span>
+      <span
+        ><a href="https://www.instagram.com/big_unity/" target="_blank"
+          >social media platforms</a
+        ></span
+      >. <span onclick="myFunction()">Currently im working on</span>
+      <span
+        class="link2"
+        onclick="document.getElementById('add-window-5').style.display='block'"
+        >web series</span
+      >
+      <span onclick="myFunction()"
+        >about computer and futures. Feel free to send me a message at:
+        hello@anastasia-naumenko.com</span
+      >
+    </h1>
+
+    <div class="window-typo" id="add-window-1" style="display:none">
+      During the quarantine I made cyanotype prints of everyday objects from my
+      flat and then transformed them into sea-views using pixel-managing
+      algorithms.
+
+      <p></p>
+      <img
+        src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2FBez-nazwy-2.gif?v=1600982699081"
+        alt="landscape"
+        style="width:80%"
+      />
+      <p></p>
+
+      <img
+        src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2F1_1.png?v=1600982688097"
+        alt="landscape"
+        style="width:80%"
+      />
+
+      <p>
+        <img
+          src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2F1_2.png?v=1600982689715"
+          alt="landscape"
+          style="width:80%"
+        />
+      </p>
+      <p>
+        <img
+          src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2F2_1.png?v=1600982695103"
+          alt="landscape"
+          style="width:80%"
+        />
+      </p>
+
+      <p>
+        <img
+          src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2F2_2.png?v=1600982698603"
+          alt="landscape"
+          style="width:80%"
+        />
+      </p>
+
+      <span
+        class="link"
+        onclick="document.getElementById('add-window-1').style.display='none'"
+        >[close]</span
+      >
+    </div>
+
+    <div class="window-typo" id="add-window-2" style="display:none">
+      The animation is now on it's festival tour. It was originally pitched at
+      the Krakow Film Festival before being selected by Animator in Poznan and
+      REX in Stockholm. It’s listed as one of the best polish animations by the
+      Warsaw Film Festival and will have its european premiere at Interfilm,
+      Berlin. You can watch a
+      <span
+        ><a href="https://vimeo.com/394755349" target="_blank">
+          trailer</a
+        ></span
+      >
+      or request a screening link. :)
+      <p>
+        <img
+          src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2FWe%20hope%20you%20won't%20need%20to%20come%20back_Anastazja_Naumenko_1%20(1).jpg?v=1600984134443"
+          alt="still"
+          style="width:100%"
+        />
+      </p>
+      <span
+        class="link"
+        onclick="document.getElementById('add-window-2').style.display='none'"
+        >[close]</span
+      >
+    </div>
+
+    <div class="window-typo" id="add-window-3" style="display:none">
+      This is an ongoing project, in which I'm exploring the term naive user and
+      the behaviours we recognize as default while interacting with various
+      devices. The interfaces and patterns we use on a daily basis are
+      determined by a very exclusive group of developers and based on specific
+      ideologies. This series is an attempt to deconstruct these mechanisms in
+      the form of visual narration. Melanie Hoff’s “Digital Love Languages”
+      course inspired further thoughts on this topic.
+
+      <p></p>
+      <span
+        class="link"
+        onclick="document.getElementById('add-window-3').style.display='none'"
+        >[close]</span
+      >
+    </div>
+
+    <div class="window-typo" id="add-window-4" style="display:none">
+      Big Waves in Unity is the first political entity generated based on the
+      regulations of the most popular social media platforms and transcripts of
+      interviews with their CEO’s. The starting point was the idea that
+      Facebook, Instagram and TikTok are new political (quasi-countries?)
+      formations, with their own boundaries, systems of identification and
+      methods of punishment. Many users don’t recognize them as such, while
+      limiting their functioning on the internet to activity in
+      highly-controlled ecosystems. Using the metaphor of politicians and
+      elections we are participating in unconsciously, we implemented a markov
+      chain algorithm and fed it with official documentation of these social
+      networks. BWIU regulary publishes its statements on Twitter and Instagram.
+      You can learn more about the context of the project by listening to the
+      <span
+        ><a
+          href="https://soundcloud.com/design-happens/speculative-design/"
+          target="_blank"
+          >podcast (russian)</a
+        ></span
+      >
+      or visiting the
+      <span
+        ><a href="https://speculativedesign.online/" target="_blank"
+          >online exhibition website</a
+        ></span
+      >.
+
+      <p></p>
+      <span
+        class="link"
+        onclick="document.getElementById('add-window-4').style.display='none'"
+      >
+        [close]</span
+      >
+    </div>
+
+    <div class="window-typo" id="add-window-5" style="display:none">
+      My friends and I began developing this idea during a Visegrad workshop at
+      the FilmFest Dresden. I’m working on a script for the first episode.
+      <p></p>
+      <span
+        class="link"
+        onclick="document.getElementById('add-window-5').style.display='none'"
+      >
+        [close]</span
+      >
+    </div>
+
+    <div class="window-typo" id="add-window-6" style="display:none">
+      <img
+        src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2FAnastazja_Naumenko_1.jpg?v=1601051885955"
+        alt="still"
+        style="width:100%"
+      />
+
+      <p></p>
+      <span
+        class="link"
+        onclick="document.getElementById('add-window-6').style.display='none'"
+      >
+        [close]</span
+      >
+    </div>
+  </body>
 </html>
