--- a/index.html
+++ b/index.html
@@ -91,28 +91,28 @@
 
       <p></p>
       <img
-        src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2FBez-nazwy-2.gif?v=1600982699081"
+        src="FBez-nazwy-2.gif"
         alt="landscape"
         style="width:80%"
       />
       <p></p>
 
       <img
-        src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2F1_1.png?v=1600982688097"
+        src="1_1.png"
         alt="landscape"
         style="width:80%"
       />
 
       <p>
         <img
-          src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2F1_2.png?v=1600982689715"
+          src="1_2.png"
           alt="landscape"
           style="width:80%"
         />
       </p>
       <p>
         <img
-          src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2F2_1.png?v=1600982695103"
+          src="2_1.png"
           alt="landscape"
           style="width:80%"
         />
@@ -120,7 +120,7 @@
 
       <p>
         <img
-          src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2F2_2.png?v=1600982698603"
+          src="2_2.png"
           alt="landscape"
           style="width:80%"
         />
@@ -147,7 +147,7 @@
       or request a screening link. :)
       <p>
         <img
-          src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2FWe%20hope%20you%20won't%20need%20to%20come%20back_Anastazja_Naumenko_1%20(1).jpg?v=1600984134443"
+          src="Anastazja_Naumenko_1(1).jpg"
           alt="still"
           style="width:100%"
         />
@@ -226,7 +226,7 @@
 
     <div class="window-typo" id="add-window-6" style="display:none">
       <img
-        src="https://cdn.glitch.com/401de8ee-6e34-4a96-9e5b-f289823ad109%2FAnastazja_Naumenko_1.jpg?v=1601051885955"
+        src="Anastazja_Naumenko_1.jpg"
         alt="still"
         style="width:100%"
       />
