--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <script
       src="script.js">
     </script>
+    <script>
+      function myFunction() {
+        document.getElementById("add-window-1").style.display = "none";
+        document.getElementById("add-window-2").style.display = "none";
+        document.getElementById("add-window-3").style.display = "none";
+        document.getElementById("add-window-4").style.display = "none";
+        document.getElementById("add-window-5").style.display = "none";
+        document.getElementById("add-window-6").style.display = "none";
+      }
+    </script>
   </head>
 
   <body>
@@ -147,7 +157,7 @@
       or request a screening link. :)
       <p>
         <img
-          src="Anastazja_Naumenko_1(1).jpg"
+          src="Anastazja_Naumenko_1 (1).jpg"
           alt="still"
           style="width:100%"
         />
