--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
       <p></p>
       <img
-        src="FBez-nazwy-2.gif"
+        src="Bez-nazwy-2.gif"
         alt="landscape"
         style="width:80%"
       />
