--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       or request a screening link. :)
       <p>
         <img
-          src="Anastazja_Naumenko_1 (1).jpg"
+          src="We hope you won't need to come back_Anastazja_Naumenko_1 (1).jpg"
           alt="still"
           style="width:100%"
         />
